--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ on:
 env:
   # update with the name of the main binary
   binary: bevy_github_ci_template
-  add_binaries_to_github_release: true
+  add_binaries_to_github_release: false
   #itch_target: <itch.io-username>/<game-name>
 
 
