--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,7 +9,7 @@ env:
   # update with the name of the main binary
   binary: bevy_github_ci_template
   add_binaries_to_github_release: false
-  #itch_target: <itch.io-username>/<game-name>
+  itch_target: aeon-felis/gardening-gun
 
 
 jobs:
@@ -239,6 +239,7 @@ jobs:
             ./butler push \
                 --fix-permissions \
                 --userversion="${{ steps.get_version.outputs.tag }}" \
+                --ignore="*.blend" \
                 builds/$channel/* \
                 ${{ env.itch_target }}:$channel
           done
