--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,7 +7,7 @@ on:
 
 env:
   # update with the name of the main binary
-  binary: bevy_github_ci_template
+  binary: gardening-gun
   add_binaries_to_github_release: false
   itch_target: aeon-felis/gardening-gun
 
