--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ bevy_pkv = "0.7.0"
 bevy_rapier2d = "0.21.0"
 clap = { version = "4.2.1", features = ["derive"] }
 leafwing-input-manager = "0.9.1"
+ordered-float = "3.6.0"
 serde = "1.0.159"
